# Vybe

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/agents/: Vybe.agent.md
.github/workflows/: ci.yml  publish.yml
completions/: _vybe  vybe.bash  vybe.fish
docs/: CLI_CONTRACT.md  man.md
examples/: frontend-build-failure.md  pytest-debug-loop.md  serial-monitor-nonutf8.md
src/vybe/: cli.py
tests/: test_cli_flows.py
