
[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "vybe"
version = "0.1.0"
description = "Vibe coding terminal capture toolkit"
authors = [{name = "Homer Morrill"}]
license = {text = "MIT"}
requires-python = ">=3.8"

[project.scripts]
vybe = "vybe.cli:main"
