[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "vybe"
version = "1.0.0"
description = "Vibe coding terminal capture toolkit"
authors = [{name = "Homer Morrill"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"

[project.scripts]
vybe = "vybe.cli:main"

[tool.setuptools.package-data]
vybe = ["man.md"]
